--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
       <div class="header-content__container">
         <h1 class="header-content__title"> WE ARE REAL WEB-DEVELOPERS</h1>
         <div class="header-content__buttons">
-          <a class="header-content__btn" href="">Leaen more</a>
+          <a class="header-content__btn" href="">Learn more</a>
           <a class="header-content__btn" href="">Get started</a>
         </div>
       </div>
     </div>
   </header>
 
-  <section class="skills">
+  <!-- <section class="skills">
     <div class="skills_container"></div>
     <article class="skills_item">
       <div class="skills_item__overlay"></div>
       <div class="skills_item__image"></div>
       <h3 class="skills_item__title"></h3>
     </article>
-  </section>
+  </section> -->
   <footer class="footer"></footer>
   <!-- Код пишем здесь -->
 
