header+1section. Adaptive for this features

--- a/index.html
+++ b/index.html
@@ -58,17 +58,83 @@
       </div>
     </div>
   </header>
+  <section class="skills">
+    <div class="skills__container">
+      <article class="skill-item">
+        <div class="skill-item__overlay"></div>
+        <div class="skill-item__image"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="">HTML</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay"></div>
+        <div class="skill-item__image"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="">CSS</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay"></div>
+        <div class="skill-item__image"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="">Markup</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay"></div>
+        <div class="skill-item__image"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="">Web-Dasign</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay"></div>
+        <div class="skill-item__image"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="">Quality Assurance</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay"></div>
+        <div class="skill-item__image"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="">Codding</a>
+        </h3>
+      </article>
+      
+      <article class="skill-item">
+        <div class="skill-item__overlay"></div>
+        <div class="skill-item__image"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="">Adaptability</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay"></div>
+        <div class="skill-item__image"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="">PHP</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay"></div>
+        <div class="skill-item__image"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="">SEO</a>
+        </h3>
+      </article>
+      
+      </article>
+    </div>
+    <div class="skills__button">
+      <a class="btn-accent" href="">View all skills...</a>
+    </div>
+  </section>
 
-  <!-- <section class="skills">
-    <div class="skills_container"></div>
-    <article class="skills_item">
-      <div class="skills_item__overlay"></div>
-      <div class="skills_item__image"></div>
-      <h3 class="skills_item__title"></h3>
-    </article>
-  </section> -->
+ 
   <footer class="footer"></footer>
-  <!-- Код пишем здесь -->
+ 
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="assets/js/main.js"></script>
