--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li class="header-navbar__item">
               <a class="header-navbar__link" href="">Home</a>
             </li>
-            <li class="header-navbar__item"> 
+            <li class="header-navbar__item">
               <a class="header-navbar__link" href="">About</a>
             </li>
             <li class="header-navbar__item">
@@ -102,7 +102,7 @@
           <a class="skill-item__link" href="">Codding</a>
         </h3>
       </article>
-      
+
       <article class="skill-item">
         <div class="skill-item__overlay"></div>
         <div class="skill-item__image"></div>
@@ -124,17 +124,49 @@
           <a class="skill-item__link" href="">SEO</a>
         </h3>
       </article>
-      
+
       </article>
     </div>
     <div class="skills__button">
       <a class="btn-accent" href="">View all skills...</a>
     </div>
   </section>
+  <section class="about">
+    <div class="about__container">
+      <div class="about__content">
+        <h2>
+          <span class="about__content--accent">Are You Ready?</span> Let's start!</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptates
+          commodi eligendi perspiciatis non ipsam numquam, perferendis fugiat amet
+          molestias provident unde, deleniti quo ducimus placeat voluptas!
+        </p>
+        <p>Quisquam voluptatum quae veritatis quas odio dolores quis voluptas asperiores
+          ex obcaecati reiciendis quidem ducimus et doloribus sed tempore, unde beatae aut 
+          consectetur eligendi ratione repellendus nulla pariatur. Explicabo enim officia 
+          iure blanditiis eos, velit.
+        </p>
+        <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta 
+          recusandae quas nobis reprehenderit necessitatibus placeat corporis enim aliquid 
+          sequi saepe. Quos amet, aliquam, reiciendis porro eos voluptates maiores. Voluptas 
+          dolor quidem tempora illum laboriosam dolorum neque tenetur.
+        </p>
+        <p>Alias voluptates commodi eligendi perspiciatis non ipsam numquam, perferendis 
+          fugiat amet molestias provident unde, deleniti quo ducimus placeat voluptas! Quos 
+          amet, aliquam, reiciendis porro eos voluptates maiores.
+        </p>
+        <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta 
+          recusandae quas nobis reprehenderit necessitatibus placeat corporis enim aliquid 
+          sequi saepe.</p>
+      </div>
+      <div class="about__image">
+        <img src="./assets/img/img-lamp-webdev.png" alt= "motivation">
+      </div>
+    </div>
+  </section>
 
- 
+
   <footer class="footer"></footer>
- 
+
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="assets/js/main.js"></script>
