--- a/index.html
+++ b/index.html
@@ -163,6 +163,20 @@
       </div>
     </div>
   </section>
+  <section class="form">
+    <form class="form__container">
+      <div class="form-item">
+        <input class="form-item-input" type="text" placeholder="Your name...">
+      </div>
+      <div class="form-item">
+        <input class="form-item-input" type="text" placeholder="Your email...">
+      </div>
+      <div class="form-item">
+        <button class="btn-accent" type="submit"> Subscribe</button>
+      </div>
+    </form>
+
+  </section>
 
 
   <footer class="footer"></footer>
