--- a/index.html
+++ b/index.html
@@ -281,7 +281,32 @@
   </section>
 
 
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <div class="footer__container">
+      <div class="footer__social">
+        <a href="#" >
+          <i class="fab fa-facebook-square"> </i>
+        </a>
+        <a href="#" >
+          <i class="fab fa-google-plus-square"> </i>
+        </a>
+        <a href="#" >
+          <i class="fab fa-twitter-square"> </i>
+        </a>
+        <a href="#" >
+          <i class="fab fa-pinterest-square"> </i>
+        </a>
+        <a href="#" >
+          <i class="fab fa-flickr"> </i>
+        </a>
+      </div>
+      <div class="footer__copy">
+        <span>WE ARE REAL</span> WEB-DEVELOPERS
+
+      </div>
+
+    </div>
+  </footer>
 
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
