--- a/index.html
+++ b/index.html
@@ -36,10 +36,6 @@
             <span class="header-navbar__btn-row"> </span>
             <span class="header-navbar__btn-row"> </span>
           </div>
-
-        
-
-
           <ul class="header-navbar__list">
             <li class="header-navbar__item">
               <a class="header-navbar__link" href="">Home</a>
@@ -65,7 +61,7 @@
       </div>
     </div>
   </header>
-  <section class="skills">
+  <div class="skills">
     <div class="skills__container">
       <article class="skill-item">
         <div class="skill-item__overlay"></div>
@@ -92,7 +88,7 @@
         <div class="skill-item__overlay"></div>
         <div class="skill-item__image"></div>
         <h3 class="skill-item__title">
-          <a class="skill-item__link" href="">Web-Dasign</a>
+          <a class="skill-item__link" href="">Web-Design</a>
         </h3>
       </article>
       <article class="skill-item">
@@ -109,7 +105,6 @@
           <a class="skill-item__link" href="">Codding</a>
         </h3>
       </article>
-
       <article class="skill-item">
         <div class="skill-item__overlay"></div>
         <div class="skill-item__image"></div>
@@ -131,13 +126,11 @@
           <a class="skill-item__link" href="">SEO</a>
         </h3>
       </article>
-
-      </article>
     </div>
     <div class="skills__button">
       <a class="btn-accent" href="">View all skills...</a>
     </div>
-  </section>
+  </div>
   <section class="about">
     <div class="about__container">
       <div class="about__content">
@@ -148,29 +141,29 @@
           molestias provident unde, deleniti quo ducimus placeat voluptas!
         </p>
         <p>Quisquam voluptatum quae veritatis quas odio dolores quis voluptas asperiores
-          ex obcaecati reiciendis quidem ducimus et doloribus sed tempore, unde beatae aut 
-          consectetur eligendi ratione repellendus nulla pariatur. Explicabo enim officia 
+          ex obcaecati reiciendis quidem ducimus et doloribus sed tempore, unde beatae aut
+          consectetur eligendi ratione repellendus nulla pariatur. Explicabo enim officia
           iure blanditiis eos, velit.
         </p>
-        <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta 
-          recusandae quas nobis reprehenderit necessitatibus placeat corporis enim aliquid 
-          sequi saepe. Quos amet, aliquam, reiciendis porro eos voluptates maiores. Voluptas 
+        <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta
+          recusandae quas nobis reprehenderit necessitatibus placeat corporis enim aliquid
+          sequi saepe. Quos amet, aliquam, reiciendis porro eos voluptates maiores. Voluptas
           dolor quidem tempora illum laboriosam dolorum neque tenetur.
         </p>
-        <p>Alias voluptates commodi eligendi perspiciatis non ipsam numquam, perferendis 
-          fugiat amet molestias provident unde, deleniti quo ducimus placeat voluptas! Quos 
+        <p>Alias voluptates commodi eligendi perspiciatis non ipsam numquam, perferendis
+          fugiat amet molestias provident unde, deleniti quo ducimus placeat voluptas! Quos
           amet, aliquam, reiciendis porro eos voluptates maiores.
         </p>
-        <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta 
-          recusandae quas nobis reprehenderit necessitatibus placeat corporis enim aliquid 
+        <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta
+          recusandae quas nobis reprehenderit necessitatibus placeat corporis enim aliquid
           sequi saepe.</p>
       </div>
       <div class="about__image">
-        <img src="./assets/img/img-lamp-webdev.png" alt= "motivation">
+        <img src="./assets/img/img-lamp-webdev.png" alt="motivation">
       </div>
     </div>
   </section>
-  <section class="form">
+  <div class="form">
     <form class="form__container">
       <div class="form-item">
         <input class="form-item-input" type="text" placeholder="Your name...">
@@ -182,7 +175,7 @@
         <button class="btn-accent" type="submit"> Subscribe</button>
       </div>
     </form>
-  </section>
+  </div>
   <section class="posts">
     <div class="posts__container">
       <h2>Some section of posts</h2>
@@ -194,10 +187,10 @@
             </div>
             <div class="post-item__caption">
               <h3> Nostrum quod fugiat odio perspiciatis</h3>
-              <p>Minus ad voluptas non, ducimus suscipit temporibus explicabo! 
-                Inventore dolorum, debitis eligendi earum in corrupti 
+              <p>Minus ad voluptas non, ducimus suscipit temporibus explicabo!
+                Inventore dolorum, debitis eligendi earum in corrupti
                 consectetur quam nesciunt facilis explicabo?
-                </p>
+              </p>
             </div>
           </a>
         </article>
@@ -213,7 +206,7 @@
                 aperiam ipsum obcaecati, quisquam.
                 Reprehenderit corporis neque
                 architecto, id, vero voluptate.
-                </p>
+              </p>
             </div>
           </a>
         </article>
@@ -229,7 +222,7 @@
                 cumque, quaerat minima repudiandae
                 consectetur incidunt dolorum, culpa,
                 voluptates ab!
-                </p>
+              </p>
             </div>
           </a>
         </article>
@@ -245,7 +238,7 @@
                 veniam officiis sapiente a veritatis
                 corporis voluptatum repellendus,
                 autem dolore molestiae suscipit quia!
-                </p>
+              </p>
             </div>
           </a>
         </article>
@@ -261,7 +254,7 @@
                 cumque, quaerat minima repudiandae
                 consectetur incidunt dolorum, culpa,
                 voluptates ab!
-                </p>
+              </p>
             </div>
           </a>
         </article>
@@ -275,7 +268,7 @@
               <p> Ad est voluptate sunt, cupiditate, voluptatem dignissimos corporis unde cumque distinctio, ab odio
                 dolores
                 molestias non cum fugiat enim voluptatibus!
-                </p>
+              </p>
             </div>
           </a>
         </article>
@@ -291,19 +284,19 @@
   <footer class="footer">
     <div class="footer__container">
       <div class="footer__social">
-        <a href="#" >
+        <a href="#">
           <i class="fab fa-facebook-square"> </i>
         </a>
-        <a href="#" >
+        <a href="#">
           <i class="fab fa-google-plus-square"> </i>
         </a>
-        <a href="#" >
+        <a href="#">
           <i class="fab fa-twitter-square"> </i>
         </a>
-        <a href="#" >
+        <a href="#">
           <i class="fab fa-pinterest-square"> </i>
         </a>
-        <a href="#" >
+        <a href="#">
           <i class="fab fa-flickr"> </i>
         </a>
       </div>
